# cookiecutter_python

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  tox.toml
.github/workflows/: cicd.yaml
hooks/: post_gen_project.sh
test/: test.sh
tests/: test.sh
{{ cookiecutter.project_slug }}/: .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
{{ cookiecutter.project_slug }}/.github/workflows/: cicd.yaml  publish-to-pypi.yaml  tests.yml
{{ cookiecutter.project_slug }}/docs/: Makefile
{{ cookiecutter.project_slug }}/docs/source/: LICENSE.md  README.md  api_reference.md  api_reference.rst  conf.py  index.md  index.rst
{{ cookiecutter.project_slug }}/docs/source/_templates/autosummary/: module.rst
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py  main.py  settings.py  utils.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/utils/: logger.py
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py
