[tool.poetry]
name = "na_backend"
version = "0.0.1"
description = ""
authors = ["Marius Helf <marius@xomnia.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
