[tool.poetry]
name = "cookiecutter"
version = "0.0.1"
description = ""
authors = ["Marius Helf <helfsmarius@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "19.10b0"
flake8 = "^3.7"
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
