[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.license }}"
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
documentation = "https://{{ cookiecutter.project_slug }}.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy"
]

# Only packages in this group will be installed in the release image
[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

# documentation
[tool.poetry.group.docs.dependencies]
# Packages in this group won't be installed by pip,
# but are installed by poetry by default.
# So they are available in your dev environment,
# but not in a production environment.
# myst-nb = "^0.16.0"  # useful, but depends on really old version of sphinx
myst-parser = "^1.0.0"
Sphinx = "^6.1.3"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-mermaid = "^0.7.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
tox = "^4.0.0"

# deployment
twine = "^4.0.2"

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "E",  # flake8
    "F",  # flake8
    "I",  # isort
    "D",  # pydocstyle
    "S",  # flake8-bandit
    "NPY",  # numpy-specific rules
    "RUF",  # ruff specific rules
]
ignore = [
    "E501",
    "E712",

    "ANN202",  # Missing return type annotation for private function
    "ANN204",  # Missing return type annotation for special function
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed

    # pydocstyle
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D106",  # Missing docstring in public nested class
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[build-system]
requires = ["poetry-core>=1.4"]
build-backend = "poetry.core.masonry.api"
